--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.example.android.courtcounter2.MainActivity">
+
+   <LinearLayout
+       android:id="@+id/score_layout"
+       android:layout_width="match_parent"
+       android:layout_height="0dp"
+       android:orientation="horizontal"
+       android:layout_weight="2">
 
     <LinearLayout
         android:id="@+id/team_a_layout"
@@ -101,5 +109,15 @@
             android:onClick="add1PointForTeamB"/>
 
     </LinearLayout>
+
+   </LinearLayout>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="Reset"
+        android:layout_marginBottom="64dp"
+        android:onClick="resetScore"/>
 
 </LinearLayout>
